/*
Copyright 2023 The Invisinets Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package pluginpb;

// Note: Must set proto path to invisinetspb directory for this import to work
import "commonpb/common.proto";

option go_package="github.com/NetSys/invisinets/pkg/invisinetspb/pluginpb";

service CloudPlugin {
    rpc GetUsedAddressSpaces(GetUsedAddressSpacesRequest) returns (GetUsedAddressSpacesResponse) {}
    rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse) {}
    rpc GetPermitList(GetPermitListRequest) returns (GetPermitListResponse) {}
    rpc AddPermitListRules(AddPermitListRulesRequest) returns (AddPermitListRulesResponse) {}
    rpc DeletePermitListRules(DeletePermitListRulesRequest) returns (DeletePermitListRulesResponse) {}
    rpc CreateVpnGateway(CreateVpnGatewayRequest) returns (CreateVpnGatewayResponse) {}
    rpc CreateVpnBgpSessions(CreateVpnBgpSessionsRequest) returns (CreateVpnBgpSessionsResponse) {}
    rpc CreateVpnConnections(CreateVpnConnectionsRequest) returns (CreateVpnConnectionsResponse) {}
}

message GetUsedAddressSpacesRequest {
    string deployment = 1;
    string namespace = 2;
}

message GetUsedAddressSpacesResponse {
    repeated string address_spaces = 1;
}

message CreateResourceRequest {
    string deployment = 1;
    string namespace = 2;
    string resource = 3;
    bytes  description = 4;
}

message CreateResourceResponse {
    string name = 1;
    string uri = 2;
    string ip = 3;
}

message GetPermitListRequest {
    string          deployment = 1;
    string          namespace = 2;
    string          resource = 3;
}

message GetPermitListResponse {
    string                  resource = 1;
    repeated commonpb.PermitListRule rules = 2;
}

message AddPermitListRulesRequest {
    string                  deployment = 1;
    string                  namespace = 2;
    string                  resource = 3;
    repeated commonpb.PermitListRule rules = 4;
}

message AddPermitListRulesResponse {
}

message DeletePermitListRulesRequest {
    string                  deployment = 1;
    string                  namespace = 2;
    string                  resource = 3;
    repeated commonpb.PermitListRule rules = 4;
}

message DeletePermitListRulesResponse {

}

message CreateVpnGatewayRequest {
    string deployment = 1;
    string namespace = 2;
}

// TODO @seankimkdy: check naming of all of these to be as cloud neutral as possible
// TODO @seankmkdy: should all methods have a {method name}Request and {method name}Response message buffers

message CreateVpnGatewayResponse{
    repeated string gateway_ip_addresses = 1;
    int64 asn = 2;
}

message CreateVpnBgpSessionsRequest {
    string deployment = 1;
    string namespace = 2;
    string cloud = 3;
}

message CreateVpnBgpSessionsResponse {
    repeated string bgp_ip_addresses = 1;
}

message CreateVpnConnectionsRequest{
    string deployment = 1;
    string namespace = 2;
    string cloud = 3;
    int64 asn = 4;
    string address_space = 5;
    repeated string gateway_ip_addresses = 6;
    repeated string bgp_ip_addresses = 7;
    string shared_key = 8;
}

message CreateVpnConnectionsResponse {
}
